clusters/home/default/syncthing/99-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-web-service
  namespace: default
  labels:
    app: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - name: web-ui
      protocol: TCP
      port: 8384
      targetPort: 8384
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service
  namespace: default
  labels:
    app: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - name: tcp-transfer
      protocol: TCP
      port: 22000
      targetPort: 22000
    - name: quic-transfer
      protocol: UDP
      port: 22000
      targetPort: 22000
    - name: discovery
      protocol: UDP
      port: 21027
      targetPort: 21027
  type: LoadBalancer
    #externalTrafficPolicy: Local
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing-deployment
  namespace: default
  labels:
    app: syncthing
spec:
  replicas: 1
  serviceName: syncthing-service
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      # TODO: currently I need host networking
      # Without this somehow my WiFi devices are not picked up. Lan devices work flawlessly. Just a default openwrt config
      # maybe something with bridges?
      hostNetwork: true
      containers:
      - name: syncthing
        image: syncthing/syncthing:1.27
        ports:
          - name: discovery
            containerPort: 21027
          - name: data
            containerPort: 22000
        resources:
          requests:
            memory: "256Mi"
        volumeMounts:
        - name: syncthing-config
          mountPath: /var/syncthing
        - name: syncthing-data
          mountPath: /data
      volumes:
      - name: syncthing-config
        hostPath:
          path: /mnt/shared_data/k8s/syncthing/config
      - name: syncthing-data
        hostPath:
          path: /mnt/shared_data/k8s/syncthing/data


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: syncthing.kokev.de
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: syncthing-web-service
                port:
                  number: 8384
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - syncthing.kokev.de
      secretName: kokev-wildcard-tls
